<resources>
    <string name="app_name">PingPong</string>
    <string name="action_settings">Settings</string>
    <string name="NewGame">New Game</string>
    <string name="statMenu">See Statistics</string>
    <string name="newUser">Create New Player</string>
    <string name="ValidateUserAdd">Add User</string>
    <string name="titlePseudo">Enter a pseudo</string>
    <string name="titleName">Enter Your Name</string>
    <string name="titleSurname">Enter your surname</string>
    <string name="addPlayer">Add a player</string>
    <string name="playerList">Player List</string>
    <string name="startGame">Start new game</string>
    <string name="choosePlayers">Add players to the game!</string>
    <string name="fromScratch">Create a new player</string>
    <string name="fromDataBase">Add existing players</string>
    <string name="validatePlayerAdd">Validate Player selection</string>
    <string name="addPlayerFromScratch">Create a new player</string>
    <string name="addPlayerFromDataBase">Add an existing player</string>
    <string name="prefillUserDatabase">Prefill the user database</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noPlayer">No player
    </string>
    <string name="chooseFromDatabase">Select an existing player</string>
    <string name="queueTitle">Next players</string>
    <string name="displayPlayers">Display the player list</string>
    <string name="okay">OK</string>
    <string name="removeBegin">Remove </string>
    <string name="removeEnd"> from game</string>
    <string name="removeTitle">Remove player</string>
</resources>
