<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/playerList"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <Button
                    android:id="@+id/addFromScratch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addPlayerFromScratch" />

                <Button
                    android:id="@+id/addFromDataBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addPlayerFromDataBase" />

            </LinearLayout>




            <Button
                android:id="@+id/startNewGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startGame"
                android:layout_margin="20dp"/>

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>